--- a/vignettes/CaseStudies/PBCP2025/SETAC_Poster.Rmd
+++ b/vignettes/CaseStudies/PBCP2025/SETAC_Poster.Rmd
@@ -78,14 +78,23 @@ p1 <- ggplot(data = filter(concentration_w1CU,Substance == "Glyphosate"),
        aes(Year,Concentration*1e6, group = c(Scenario), colour = Scenario))+
   geom_line(linewidth = 2)+
   scale_color_manual(values = c("SSP1" = "green", "SSP2" = "blue", "SSP3" = "red")) +
-  labs(title = "Glyphosate", x = "", y = "Freshwater Conc. (ug/L)")
+  labs(title = "Glyphosate", x = "", y = "Freshwater Conc. (ug/L)")+
+  theme_bw()
+
+ggsave("vignettes/CaseData/Concentration Glyphosate.pdf", 
+       plot = p1, width = 8, height = 6)
 
 p2 <- 
 ggplot(data = filter(concentration_w1CU,Substance == "Terbuthylazine"),
        aes(Year,Concentration*1e9, group = c(Scenario), colour = Scenario))+
   geom_line(linewidth = 2)+
   scale_color_manual(values = c("SSP1" = "green", "SSP2" = "blue", "SSP3" = "red")) +
-  labs(title = "Terbuthylazine", x = "", y = "Freshwater Conc. (ng/L)")
+  labs(title = "Terbuthylazine", x = "", y = "Freshwater Conc. (ng/L)")+
+  theme_bw()
+
+
+ggsave("vignettes/CaseData/Concentration Terbuthylazine.pdf", plot = p2, width = 8, height = 6)
+
 
 ```
 
